overflow fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,6 +82,7 @@ figure {
   position: relative; }
 
 #colorlib-aside {
+  overflow: hidden;
   padding-top: 1em;
   padding-bottom: 40px;
   float: left;
